start building out MCP, add prompt templates

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ OPENAI_API_KEY=your_openai_api_key_here
 # ElevenLabs Configuration (Optional)
 ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
 
+# User Configuration
+USER_HOME_PATH=/Users/your_username
+
 # Default Settings
 DEFAULT_MODEL=gpt-4
 DEFAULT_VOICE=Rachel
