--- a/package.json
+++ b/package.json
@@ -29,33 +29,34 @@
   "author": "djleamen",
   "license": "MIT",
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.0.2",
     "eslint": "^8.56.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   },
   "dependencies": {
-    "openai": "^4.24.1",
-    "elevenlabs": "^1.59.0",
+    "@octokit/rest": "^20.1.2",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "electron-store": "^8.1.0",
+    "elevenlabs": "^1.59.0",
+    "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
+    "glob": "^10.3.10",
+    "hotkeys-js": "^3.12.2",
+    "node-audiorecorder": "^3.0.0",
+    "node-record-lpcm16": "^1.0.1",
+    "openai": "^4.24.1",
+    "path": "^0.12.7",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "ws": "^8.16.0",
     "speech-recognition": "^0.0.1",
-    "node-record-lpcm16": "^1.0.1",
-    "node-audiorecorder": "^3.0.0",
-    "hotkeys-js": "^3.12.2",
-    "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
     "uuid": "^9.0.1",
-    "crypto": "^1.0.1",
-    "fs-extra": "^11.2.0",
-    "path": "^0.12.7",
-    "glob": "^10.3.10"
+    "ws": "^8.16.0"
   },
   "build": {
     "appId": "com.djleamen.mai-buddy",
