--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "@notionhq/client": "^5.6.0",
     "@octokit/rest": "^20.1.2",
+    "@slack/web-api": "^7.13.0",
     "axios": "^1.12.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dockerode": "^4.0.9",
     "dotenv": "^16.3.1",
     "electron-store": "^8.1.0",
     "elevenlabs": "^1.59.0",
